Revision history for Perl extension Mobile::P2kMoto.

0.02

0.01  Tue Jun 26 21:10:14 CEST 2007
	- Initial release